--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <section id="home" class="hero-section">
         <div class="hero-bg-animation"></div>
         <div class="container">
-            <div class="row align-items-center min-vh-100">
+            <div class="row align-items-center hero-row">
                 <div class="col-lg-6" data-aos="fade-right" data-aos-duration="1000">
                     <div class="hero-content">
                         <h1 class="hero-title">
