--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cookie Policy - PMI Edu</title>
+    <link rel="icon" type="image/png" href="images/fevcom pmi.png">
     
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -169,7 +170,7 @@
                         <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link cta-nav" href="contact.html">Get Started</a>
+                        <a class="nav-link cta-nav" href="https://exam.pmiindia.org/">Login</a>
                     </li>
                 </ul>
             </div>
