--- a/certifications.html
+++ b/certifications.html
@@ -325,11 +325,15 @@
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-phone"></i>
-                            <span>+1 (555) 123-4567</span>
+                            <span>+91-8062491585</span>
+                        </div>
+                        <div class="contact-item">
+                            <i class="fab fa-whatsapp"></i>
+                            <span>+91-8882671925, +91-8604873445</span>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-map-marker-alt"></i>
-                            <span>Global Training Center</span>
+                            <span>105 WeWork, Oberoi Commerz II, Oberoi Garden City, Goregaon East, Mumbai 400063</span>
                         </div>
                     </div>
                 </div>
