--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -347,8 +347,9 @@
                 
                 <ul>
                     <li><strong>Email:</strong> privacy@pmiedu.com</li>
-                    <li><strong>Phone:</strong> +1 (555) 123-4567</li>
-                    <li><strong>Address:</strong> Global Training Center</li>
+                    <li><strong>Phone (Support):</strong> +91-8062491585</li>
+                    <li><strong>WhatsApp:</strong> +91-8882671925, +91-8604873445</li>
+                    <li><strong>Address:</strong> 105 WeWork, Oberoi Commerz II, Oberoi Garden City, Goregaon East, Mumbai 400063</li>
                 </ul>
                 
                 <p>We are committed to protecting your privacy and will respond to your inquiries promptly.</p>
@@ -407,11 +408,15 @@
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-phone"></i>
-                            <span>+1 (555) 123-4567</span>
+                            <span>+91-8062491585</span>
+                        </div>
+                        <div class="contact-item">
+                            <i class="fab fa-whatsapp"></i>
+                            <span>+91-8882671925, +91-8604873445</span>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-map-marker-alt"></i>
-                            <span>Global Training Center</span>
+                            <span>105 WeWork, Oberoi Commerz II, Oberoi Garden City, Goregaon East, Mumbai 400063</span>
                         </div>
                     </div>
                 </div>
