--- a/index.html
+++ b/index.html
@@ -548,21 +548,25 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4">
-                    <div class="footer-contact">
-                        <h4 class="footer-title">Contact Info</h4>
-                        <div class="contact-item">
-                            <i class="fas fa-envelope"></i>
-                            <span>info@pmiedu.com</span>
+                        <div class="footer-contact">
+                            <h4 class="footer-title">Contact Info</h4>
+                            <div class="contact-item">
+                                <i class="fas fa-envelope"></i>
+                                <span>info@pmiedu.com</span>
+                            </div>
+                            <div class="contact-item">
+                                <i class="fas fa-phone"></i>
+                                <span>+91-8062491585</span>
+                            </div>
+                            <div class="contact-item">
+                                <i class="fab fa-whatsapp"></i>
+                                <span>+91-8882671925, +91-8604873445</span>
+                            </div>
+                            <div class="contact-item">
+                                <i class="fas fa-map-marker-alt"></i>
+                                <span>105 WeWork, Oberoi Commerz II, Oberoi Garden City, Goregaon East, Mumbai 400063</span>
+                            </div>
                         </div>
-                        <div class="contact-item">
-                            <i class="fas fa-phone"></i>
-                            <span>+1 (555) 123-4567</span>
-                        </div>
-                        <div class="contact-item">
-                            <i class="fas fa-map-marker-alt"></i>
-                            <span>Global Training Center</span>
-                        </div>
-                    </div>
                 </div>
             </div>
             <div class="footer-bottom">
