--- a/about.html
+++ b/about.html
@@ -356,9 +356,11 @@
                 padding-bottom: 2rem !important;
             }
         }
+
         .team-section {
             background: linear-gradient(135deg, #0a0a0a 0%, #1a1a1a 100%);
         }
+
         .team-card {
             background: rgba(255, 255, 255, 0.05);
             border: 1px solid rgba(0, 255, 255, 0.2);
@@ -370,6 +372,7 @@
             overflow: hidden;
             backdrop-filter: blur(10px);
         }
+
         .team-card::before {
             content: '';
             position: absolute;
@@ -380,12 +383,17 @@
             background: linear-gradient(90deg, transparent, rgba(0, 255, 255, 0.1), transparent);
             transition: left 0.6s ease;
         }
-        .team-card:hover::before { left: 100%; }
+
+        .team-card:hover::before {
+            left: 100%;
+        }
+
         .team-card:hover {
             transform: translateY(-10px);
             border-color: rgba(0, 255, 255, 0.5);
             box-shadow: 0 25px 50px rgba(0, 255, 255, 0.2);
         }
+
         .team-avatar {
             width: 140px;
             height: 140px;
@@ -398,12 +406,14 @@
             margin-bottom: 15px;
             display: inline-block;
         }
+
         .team-name {
             color: #ffffff;
             font-weight: 700;
             margin-bottom: 6px;
             font-size: 1.1rem;
         }
+
         .team-role {
             color: #b0b0b0;
             font-size: 0.95rem;
@@ -437,7 +447,7 @@
                         <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link cta-nav" href="https://exam.pmiindia.org/">Login</a>
+                        <a class="nav-link cta-nav" href="https://exam.pmiedu.com/">Login</a>
                     </li>
                 </ul>
             </div>
@@ -534,8 +544,7 @@
     </section>
 
     <!-- Why Choose Us Section -->
-    <section class="py-5"
-        style="background: linear-gradient(135deg, #0a0a0a 0%, #1a1a1a 100%); position: relative;">
+    <section class="py-5" style="background: linear-gradient(135deg, #0a0a0a 0%, #1a1a1a 100%); position: relative;">
         <div class="container">
             <div class="text-center mb-5" data-aos="fade-up">
                 <h2 class="display-4 fw-bold mb-4">Why Choose <span class="gradient-text">PMI Edu</span>?</h2>
