--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link cta-nav" href="https://exam.pmiindia.org/">Login</a>
+                        <a class="nav-link cta-nav" href="https://exam.pmiedu.com/">Login</a>
                     </li>
                 </ul>
             </div>
